# Runtime

./: .gitignore  CMakeLists.txt  main.cpp
sdl_utils/: MonitorWindow.cpp  MonitorWindow.h  SDLLoader.cpp  SDLLoader.h  Texture.cpp  Texture.h
utils/drawings/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
